OJ-3679: Small refactor to resolve SQ issues, no functional changes